# catkin_ws

./: README.md
src/kejia_common/GPSR_generater/: CMakeLists.txt  package.xml
src/kejia_common/GPSR_generater/cfg/: gen.rviz
src/kejia_common/GPSR_generater/launch/: gen.launch
src/kejia_common/GPSR_generater/src/: bigobjects.cpp  bigobjects.h  entity.h  furnitures.cpp  furnitures.h  gpsrgen.cpp  gpsrgen.h  main.cpp  pose.cpp  pose.h  rooms.cpp  rooms.h
src/kejia_common/we_cfggenerator/: index.php  make.sh  readme.txt
src/kejia_common/we_cfggenerator/functions/: names.php
src/kejia_common/we_cfggenerator/templates/: conf.py  gslam.yaml  motor_manager.yaml  noun.xml  we_laser.yaml
src/kejia_common/we_cfggenerator/variables/: basic.php  noun.php
src/kejia_common/we_console/: CMakeLists.txt  package.xml
src/kejia_common/we_console/include/we_console/: WEConsole.h
src/kejia_common/we_console/src/: WEConsole.cpp  example.cpp  example.h
src/kejia_common/we_joint_state_publisher/: CMakeLists.txt  package.xml
src/kejia_common/we_joint_state_publisher/src/: PublishJoint.cpp
src/kejia_common/we_joy_control/: CMakeLists.txt  package.xml
src/kejia_common/we_joy_control/cfg/: we_joy_control.yaml~  we_joy_control_beitong.yaml
src/kejia_common/we_joy_control/launch/: we_joy_control.launch  we_joy_control_beitong.launch
src/kejia_common/we_joy_control/src/: joy_teleop.cpp  joy_teleop_beitong.cpp
src/kejia_common/we_kejia_description/: CMakeLists.txt  package.xml  urdf.rviz
src/kejia_common/we_kejia_description/src/: kejia.urdf  kejiab2.urdf  pr2.urdf
src/kejia_common/we_kejia_state_publisher/: CMakeLists.txt  package.xml
src/kejia_common/we_kejia_state_publisher/launch/: robot_state_publisher.launch
src/kejia_common/we_key_control/: CMakeLists.txt  mainpage.dox  manifest.xml
src/kejia_common/we_key_control/src/: teleop.cpp
src/kejia_common/we_key_setpose/: CMakeLists.txt  package.xml
src/kejia_common/we_key_setpose/launch/: we_key_setpose.launch
src/kejia_common/we_key_setpose/src/: teleop.cpp
src/kejia_common/we_log/: CMakeLists.txt  package.xml
src/kejia_common/we_log/include/we_log/: WELog.h
src/kejia_common/we_log/src/: WELog.cpp
src/kejia_common/we_map_editor/: mainpage.dox  manifest.xml
src/kejia_common/we_map_editor/src/: WEImageWidget.cpp  WEImageWidget.h  WEMapDialog.cpp  WEMapDialog.h  WEMapDialog.ui  WEMapEditor.cpp  WEMapEditor.h  WEMapEditor.qrc  gs_common.h  gs_mapb.cpp  gs_mapb.h  gs_util.cpp  gs_util.h  main.cpp  topo_map.cpp  topo_map.h  ui_WEMapDialog.h  we_map_editor.pro
src/kejia_common/we_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kejia_common/we_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kejia2.srdf  kinematics.yaml  ompl_planning.yaml
src/kejia_common/we_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  we_arm.launch
src/kejia_common/we_msgs/: CMakeLists.txt  package.xml
src/kejia_common/we_msgs/include/we_msgs/: wev_protocol.h  xform.h
src/kejia_common/we_msgs/msg/: AngleofMotor.msg  CameraStatus.msg  Cluster.msg  CrowdPeople.msg  DoorCenter.msg  FingerConfig.msg  FingerPosition.msg  FingerSpeed.msg  HandConfig.msg  JointConfig.msg  LegAll.msg  LegResult.msg  MSAPICrowd.msg  MSAPIFace.msg  MotorAngles.msg  MotorAngles.msg~  MotorTorques.msg  ObjectPosition.msg~  PeoplePose.msg  Room.msg  Rooms.msg  SearchPoint.msg  SearchPoints.msg  Space.msg  SprAngle.msg  SprStamped.msg  ThumbConfig.msg  Track.msg  TrackArray.msg  WeMcuData.msg  WeMcuData.msg~
src/kejia_common/we_msgs/srv/: ProjectMap.srv  RoomInfo.srv  SlamDet.srv  WorldtoMap.srv
src/kejia_common/we_multisocket/: CMakeLists.txt  package.xml
src/kejia_common/we_multisocket/cfg/: B2.yaml  C2.yaml  cobot.yaml
src/kejia_common/we_multisocket/launch/: we_socket.launch
src/kejia_common/we_multisocket/src/: WESocket.cpp  WESocket.h  main.cpp
src/kejia_common/we_rc/: README  bash_aliases  bashrc  setrospath.zsh  sublimetext.desktop  zshrc  zshrc.local
src/kejia_common/we_socket/: CMakeLists.txt  package.xml
src/kejia_common/we_socket _cloud/: CMakeLists.txt  package.xml
src/kejia_common/we_socket _cloud/launch/: we_socket_cloud.launch
src/kejia_common/we_socket _cloud/src/: WESocket.cpp  WESocket.h  main.cpp
src/kejia_common/we_socket/cfg/: C2.yaml  E2.yaml
src/kejia_common/we_socket/launch/: we_socket.launch  we_socket_C2.launch
src/kejia_common/we_socket/src/: WESocket.cpp  WESocket.h  main.cpp
src/kejia_hw_control/we_finger_motor_manager/: CMakeLists.txt  package.xml
src/kejia_hw_control/we_finger_motor_manager/cfg/: .gitignore  MotorManagerParameter.cfg  can_motor_manager_C2.yaml~  elevator_F2.yaml  finger_motor_manager_A3.yaml~  finger_motor_manager_F2.yaml
src/kejia_hw_control/we_finger_motor_manager/driver/linux_usbcan/: test
src/kejia_hw_control/we_finger_motor_manager/driver/ubuntu16_04/: install.txt
src/kejia_hw_control/we_finger_motor_manager/driver/ubuntu16_04/test/: test  test.c
src/kejia_hw_control/we_finger_motor_manager/launch/: finger_motor_manager.launch
src/kejia_hw_control/we_finger_motor_manager/src/: .gitignore  AmpDef.h  ArmPlan.cpp  CanMotor.cpp  CanMotor.h  CanOpen.cpp  CanOpen.h  ConfigManager.cpp  ConfigManager.h  ControlCan.h  Motor.h  MotorManagerNode.cpp  MotorManagerNode.h  ProValve.cpp  ProValve.h  PullPressSensor.cpp  PullPressSensor.h  RS485.cpp  RS485.h  SerialCom.cpp  SerialCom.h  SerialComMotor.cpp  arm.cpp  main.cpp  mcu.cpp  mcu.h  pantiltBroadcaster.cpp  pantiltBroadcaster.h  xform.h
src/kejia_hw_control/we_finger_motor_manager/src/test/: CMakeCache.txt  CMakeLists.txt  Makefile  arm.cpp  cmake_install.cmake  we_can_motor_test
