<?xml version="1.0"?>
<package>
  <name>gpsr_gen</name>
  <version>0.0.0</version>
  <description>The gpsr_gen package</description>

  <maintainer email="sway@todo.todo">sway</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>we_console</build_depend>
  <build_depend>we_log</build_depend>
  <build_depend>we_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>we_console</run_depend>
  <run_depend>we_log</run_depend>
  <run_depend>we_msgs</run_depend>
  <export>

  </export>
</package>
