<?xml version="1.0"?>
<package>
  <name>we_log</name>
  <version>0.0.0</version>
  <description>The we_log package</description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>TODO</license>
  <author email="min@example.com">Min Cheng</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
